# Movie-Recommendation-with-Agent-AI

./: .gitignore
pa/: readme.txt
pa/PA1/: Group 01 - SDP.docx  Group 01 - Vision Document.docx  Group 01 - Weekly Report 01.docx
src/: .env  .gitignore  docker-compose.yaml
src/backend/: .dockerignore  .env  .gitignore  Dockerfile  Dockerfile.mongo  README.md  __huggingface_repos__.json  db_config.py  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  setup.py  temp.py
src/backend/ai/: chatbot.py  chatbot_v2.py  chatbot_v3.py  embedder.py
src/backend/api/: auth.py  chatbot.py  comment.py  movie.py  user.py
src/backend/api/v1/: user.py
src/backend/config/: config.py  db_config.py  movie_embedding_config.yaml
src/backend/core/: api.py  auth.py  chatbot.py  chatbot_prompt.py  embedder.py  movie.py  selenium_util.py  test_auth.py  utils.py
src/backend/data/: create_movie_description.py  embed_movie_name.py  import.sh  insert_elastic_search_data.py
src/backend/db/: chroma.py  clients.py  crud.py  crud_comment.py  crud_user.py  es.py  mongo_client.py  redis_client.py  session.py
src/backend/models/: comment.py  favorite.py  user.py
src/backend/schemas/: comment.py  movie.py  user.py
src/backend/services/: auth.py  chatbot.py  comment.py  movie.py  user.py
src/backend/tests/core/: test_api.py  test_auth.py  test_selenium_util.py  test_utils.py
src/backend/tests/services/: test_auth_service.py  test_comment_service.py  test_movie_service.py  test_user_service.py
src/backend/utils/: common_functions.py  logger.py
test/: filter.xlsx
(+118 files in other folders)
