[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "langchain-google-genai>=2.1.5",
    "langchain-groq>=0.3.2",
    "langchain-redis>=0.2.2",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "redis>=6.2.0",
]
